# src/main/java/ejada/task/taskManagement/controller/dtos/AuthResponse.java
@@ -2,14 +2,13 @@ package ejada.task.taskManagement.controller.dtos;
 
 import lombok.AllArgsConstructor;
 import lombok.Builder;
-import lombok.Getter;
+import lombok.Data;
 import lombok.NoArgsConstructor;
 
-@Getter
+@Data
 @Builder
 @AllArgsConstructor
 @NoArgsConstructor
-public class CreatedTaskManagementResponseModel {
-
-    private Long id;
+public class AuthResponse {
+    private String token;
 }
